# apex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: APEX v1 — EBNF Grammar (Complete Specification).md  APEX v1 — Full Specification Draft (RFC-Style).md  APEX v1 — Reference Parser & Interpreter Architecture (Rust).md  APEX v1 — Semantic Rules (Execution & Meaning Specification).md  APEX v1.1 — Hardening Addendum.md
prompts/: executor_v1_1.txt  generator_v1_1.txt
src/: ast.rs  errors.rs  interpreter.rs  lib.rs  prompts.rs  sem.rs  tool_registry.rs  validate.rs
src/parser/: lexer.rs  mod.rs  parser.rs
tests/: v1_1_constraint_tests.rs  v1_1_diff_tests.rs  v1_1_tolerant_parse_tests.rs  v1_1_tool_registry_tests.rs  v1_1_version_tests.rs
