[package]
name = "apex_spec"
version = "0.1.0"
edition = "2021"
description = "APEX v1 Parser, Validator, and Interpreter - Agent Planning & Execution Specification"
license = "GPL-3.0"
authors = ["Feanor"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
