[package]
name = "apex_spec"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
description = "APEX Spec v1.1 — Deterministic DSL for agent planning, validation, and tool execution. Parser, validator, interpreter, prompts included."
repository = "https://github.com/oldnordic/apex"
homepage = "https://github.com/oldnordic/apex"
documentation = "https://docs.rs/apex_spec"
authors = ["Feanor"]
keywords = [
    "dsl",
    "agents",
    "llm",
    "planning",
    "parser"
]
categories = [
    "parser-implementations",
    "development-tools",
    "text-processing"
]
include = [
    "src/**/*",
    "prompts/**/*",
    "spec/**/*",
    "README.md",
    "LICENSE",
    "Cargo.toml"
]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
